--- a/ConsoleAppCrafting/ConsoleAppCrafting/ConsoleAppCrafting.csproj
+++ b/ConsoleAppCrafting/ConsoleAppCrafting/ConsoleAppCrafting.csproj
@@ -8,10 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Data\creature.xml" />
     <None Remove="Data\DyeRecipes.xml" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Data\creature.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Data\DyeRecipes.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
